# til

./: .gitignore  .pre-commit-config.yaml  Justfile  mkdocs.yml  pyproject.toml
.cursor/rules/proxmox-rules/: proxmox-shell-scripting.mdc
docs/: index.md  macos.md
docs/llms/: faq.md  few_shot_prompting.md  multi_agent_comparison.md
docs/proxmox/: audit_proxmox_storage.sh  check_resources.sh  create_ubuntu_vm.sh  create_ubuntu_vm_replacement.sh  delete_vm.sh  pvesm_list.txt  qm_status.txt  show_vm_details.sh
