[project]
name = "til"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocstrings[python]>=0.27.0",
    "pymarkdownlnt>=0.9.25",
    "pytest>=8.3.3",
    "radon>=6.0.1",
    "ruff>=0.7.3",
]
